[gd_scene load_steps=2 format=2]

[ext_resource path="res://SceneObjects/SceneObject.gd" type="Script" id=1]

[node name="SceneObject" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_SceneObject_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_SceneObject_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SceneObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SceneObject_mouse_exited"]
